<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_scan</name>
  <version>0.0.0</version>
  <description>dummy_scan</description>
  <maintainer email="thk@dummy.com">thk</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
