<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ms_stub</name>
  <version>0.0.0</version>
  <description>Controller package for seed robots</description>
  <maintainer email="thk@dummy.com">thk</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>seed_ros2_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
