<?xml version="1.0"?>
<package format="3">
  <name>aero_controller_msgs</name>
  <version>0.0.0</version>
  <description>T.B.D</description>
  <maintainer email="thk@dummy.com">thk</maintainer>
  <license>BSD</license>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
