<?xml version="1.0"?>
<package format="3">
  <name>config_controller</name>
  <version>0.0.0</version>
  <description>T.B.D</description>
  <maintainer email="thk@dummy.com">thk</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>seed_ros2_controller</depend>
  <depend>controller_manager_msgs</depend>
  <depend>config_controller_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
