<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechanum_controller</name>
  <version>0.0.0</version>
  <description>Controller for controlling mechanum wheel.</description>
  <maintainer email="thk@dummy.com">thk</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>rcpputils</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
